2012-11-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinTest.c: [Bug 3585396]: winDialog.test requires user
	* tests/winDialog.test: interaction. Renumber test-cases as in
	Tk 8.6, and convert various to tcltest-2 style.

2012-11-09  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.13 TAGGED FOR RELEASE ***

	* generic/tk.h:		Bump to 8.5.13 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

2012-11-07  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFocus.c (TkSetFocusWin): [Bug 3574708]: Move window
	liveness into this function from caller sites to ensure that there are
	no paths where things can trip up on setting the focus to a partially
	dead window.

2012-10-24  Don Porter  <dgp@users.sourceforge.net>

	* macosx/tkMacOSXWm.c:	[Bug 3574893] Add overlooked toplevel ref
	count maintenance in the [wm manage|forget] operations that could
	cause segfaults due to premature free of structs.

2012-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkButton.h: Backport of ::tk::mac::useCompatibilityMetrics
	* generic/tkButton.c  handling and scrollbar metrics handling from trunk.
	* generic/tkScrollbar.h
	* generic/tkScrollbar.c
	* macosx/tkMacOSXButton.c
	* macosx/tkMacOSXScrlbr.c
	* unix/tkUnixPort.h
	* win/tkWinButton.c
	* win/tkWinScrlbr.c

2012-10-09  Andreas Kupries  <andreask@activestate.com>

	Cherrypick Merge, Backport of [6223d9e067]. Restored from
	tk-cocoa-8-5-bacport-branch, did not survive the merge.
	See trunk 2012-05-29 Donal K. Fellows

	* generic/tkInt.decls (TkMacOSXDrawable): Added OSX-specific mechanism
	to allow retrieval of the drawing surface. Allows Canvas3d to be
	adapted to 8.6.

2012-09-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.h:     Add 8 colors to the supported color list
	* generic/tkColor.c:   (aqua, crimson, fuchsia, indigo, lime,
	* unix/tkUnixColor.c:  olive, silver and teal), part of TIP #403